# DimTypes

./: BUILD.sh  CMakeLists.txt
Docs/: DimTypesC++0x.TeX  DimTypesC++0x.bib
Include/: DimTypes.hpp
Include/Bits/: Encodings.hpp  FracPower.hpp
Include/DimTypes/: DimTypes.hpp
Include/DimTypes/Bits/: CEMaths.hpp  ConstExprMaths.hpp  Encodings.hpp  FracPower.hpp  Macros.h
Tests/: CEMathsTest.cpp  CMakeLists.txt  DimTest.cpp
